오라클 디비 개념 정리

--- a/partC/bin/자료구조.md
+++ b/partC/bin/자료구조.md
@@ -5,9 +5,17 @@
 수정,추가,삭제                                                           O                             O                    O
 기본 정렬 기능       X              X            X              O        O (key 기준 abc 정렬)
 
+- 리스트 (인터페이스)
+    배열의 단점을 해결한 자료형
+    - 메모리가 허용하는 한 계속해서 추가 가능
+    - 
+    메소드
+    값을 꺼내고 싶을 때 get(index) 함수를 사용
+
 
 2. Map<key, value>
     - Map의 핵심 key
+    - 변동성이 적은 자료 ex) 메뉴(pcode, 가격)
     Map<String,Integer> map = new LinkedHashMap<>();
     map.put("pasta",0);   //   추가 
 
